sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/VCC_Test_Configuration_Data__c.object-meta.xml
<CustomObject>
    <description>Used by the &quot;Integration Test Utility&quot;. Data here is used as input parameters for test runs.</description>
    <label>Test Configuration Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Configuration Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Configuration Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>