sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/fields/VCC_ICN__c.field-meta.xml
<CustomField>
    <fullName>VCC_ICN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ICN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>