sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/fields/VCC_Note_Text__c.field-meta.xml
<CustomField>
    <fullName>VCC_Note_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>