sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/fields/VCC_Note_Title_IEN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Note_Title_IEN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note Title IEN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>