sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/fields/VCC_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Org_Type__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
                <default>true</default>
                <label>DEV</label>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>STAGING</fullName>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
            <value>
                <fullName>SCRATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>