sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/fields/VCC_Procedure_Codes__c.field-meta.xml
<CustomField>
    <fullName>VCC_Procedure_Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Procedure Codes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>