sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/fields/VCC_Service__c.field-meta.xml
<CustomField>
    <fullName>VCC_Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PharmacyI</fullName>
                <label>Pharmacy I</label>
            </value>
            <value>
                <fullName>PharmacyII</fullName>
                <label>Pharmacy II</label>
            </value>
            <value>
                <fullName>TeleEC</fullName>
                <label>Tele-EC</label>
            </value>
            <value>
                <fullName>Admin</fullName>
                <label>Admin &amp; Scheduling</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>Clinical Triage</label>
            </value>
            <value>
                <fullName>VCV</fullName>
                <label>Virtual Clinic Visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>