sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/recordTypes/VCC_Vdif_Test_Patient.recordType-meta.xml
<RecordType>
    <fullName>VCC_Vdif_Test_Patient</fullName>
    <active>true</active>
    <label>VCC Vdif Test Patient</label>
</RecordType>