sfdx-source/main/default/objects/VCC_Test_Configuration_Data__c/validationRules/VCC_Vdif_Test_Patient_AccId_or_ICN.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Vdif_Test_Patient_AccId_or_ICN</fullName>
    <active>true</active>
    <description>An ICN is required for VDIF tests. This validation rule enforces that the record have either a literal ICN or an Account Id in which an ICN can be retrieved via
        query.</description>
    <errorConditionFormula
    >RecordType.DeveloperName == &apos;VCC_Vdif_Test_Patient&apos; &amp;&amp; ( ISBLANK( VCC_Account_Id__c ) &amp;&amp; ISBLANK( VCC_ICN__c ) )</errorConditionFormula>
    <errorMessage>Both Account Id and ICN may not be blank.</errorMessage>
</ValidationRule>